add style to title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h3 style="color white">Speak on your device's microphone </h3>
+	<h3 style="color:white; text-align:center;">Speak on your device's microphone </h3>
 	<div class="words" contenteditable>
 		
 	</div>
